Basic generation of module dependency graphs (#181)
* basic commands for producing module-level dependency graphs with links

* basic make commands for generating svgs via rvdpdgraph, make every module non-empty for it to work

* update Docker and Jenkins file for generation of module-level dep graphs

* remove dpd and dot files by default

* basic linking to module dependency graph in coqdoc

--- a/resources/header.html
+++ b/resources/header.html
@@ -12,7 +12,7 @@
 <body onload="document.getElementById('content').focus()">
   <div id="header">
     <span class="left">
-      <span class="modulename"> <script> document.write(document.title) </script> </span>
+      <span class="modulename"><script>document.write("<a href='" + document.title + ".svg'>" + document.title + "</a>")</script></span>
     </span>
 
     <span class="button" id="toggle-proofs"></span>
